NXT-489 Fix image vertical alignment when using Storyblok image component

--- a/web/src/components/Storyblok/Testimonial/shared/Testimonial.module.scss
+++ b/web/src/components/Storyblok/Testimonial/shared/Testimonial.module.scss
@@ -63,6 +63,7 @@
     height: 64px;
     margin-right: utils.rem(spacing.$medium);
     object-fit: cover;
+    vertical-align: middle;
     width: 64px;
 
     @container testimonial (min-width: #{media-queries.$sm}) {
